--- a/web/tpl/navigation.html
+++ b/web/tpl/navigation.html
@@ -6,6 +6,9 @@
                     <a href="/main" >Главная</a>
                 </li>
                 <li class="dropdown">
+                    <a href="/tables" >Таблицы</a>
+                </li>
+                <li class="dropdown">
                     <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Статистика <b class="caret"></b></a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
                         <li role="presentation">
